<resources>
    <string name="app_name">Labyrinth</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Labyrinth</string>
    <string name="second_fragment_label">Playground</string>
    <string name="easy_level">Easy Level</string>
    <string name="medium_level">Medium Level</string>
    <string name="hard_level">Hard Level</string>
    <string name="down">Down</string>
    <string name="up">Up</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="error">Error</string>

    <string name="hello_world">Hello world</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="ball">ball</string>
    <string name="help">Help</string>
    <string name="helped">Helped</string>
    <string name="continuous_slider">continuousSlider</string>
    <string name="sliderLabel">Select map size</string>
</resources>